--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,9 @@
       "src": "/.*",
       "dest": "flask-app.py"
     }
-  ]
+  ],
+  "env": {
+    "GEMINI_API_KEY": "@gemini_api_key",
+    "GROQ_API_KEY": "@groq_api_key"
+  }
 }
